# motor_city

./: .env  .gitignore  .rubocop.yml  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  motor_city.gemspec
.github/workflows/: main.yml
lib/: motor_city.rb
lib/motor_city/: ffi.rb  post.rb  version.rb
lib/motor_city/ffi/: array.rb  connection_result.rb  result.rb
migrations/2022-06-25-114855_populate_post_data/: down.sql  up.sql
sig/: motor_city.rbs
spec/: motor_city_spec.rb  spec_helper.rb
spec/motor_city/: ffi_spec.rb  post_spec.rb
src/: array.rs  conn_manager.rs  lib.rs  models.rs  result.rs
