[package]
name = "motor_city"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at:
#   https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
lazy_static = "1.4"
